--- a/src/style/blocks/pageHeader/bottomMenu.scss
+++ b/src/style/blocks/pageHeader/bottomMenu.scss
@@ -1,5 +1,5 @@
 .menu-bottom {
- background-image: url(./src/img/header-mobile-1x.jpg);
+ background-image: url(/src/img/header-mobile-1x.jpg);
     background-position: 50% 60%;
     background-repeat: no-repeat;
 
@@ -17,7 +17,7 @@
         list-style: none;
         padding: 0;
         margin: 0;
-       
+
     }
 
     &__item {
@@ -29,7 +29,8 @@
         color: $white;
         text-decoration: none;
         display: block;
-        background: url('img/sprites.png') no-repeat;
+        background: url('/src/img/sprites.png') no-repeat;
+
         background-position: -226px -12px ;
 	width: 41px;
 	height: 62px;
@@ -44,11 +45,11 @@
 
     }
 
-   
+
     &__item--right {
         border: 1px solid $greenRight;
         background-color: $greenRight;
-       
+
 
 
     }
