--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -3,6 +3,8 @@
 
 
 .main-catalog {
+//margin-top: -510px;
+width: 320px;
   &__title {
 
 display: block;
@@ -15,7 +17,7 @@ line-height: 30px;
   .catalog {
 
 &__img{
-background:url(/src/img/item1-mobile-1x.jpg)no-repeat;
+background:url('/src/img/item1-mobile-1x.jpg')no-repeat;
 width: 260px;
 height: 195px;
 margin-left: 30px;
@@ -26,7 +28,7 @@ margin-left: 30px;
   width: 260px;
   border: 1px solid #ececec;
   margin-left: 30px;
-margin-top: -4px;
+margin-top: -3px;
 margin-bottom: 20px;
     }
 &__item:hover{
@@ -46,7 +48,7 @@ cursor: pointer;
 @include textLg(17px,700);
   line-height: 24px;
   margin-left: 30px;
-  margin-top: 20px;
+  margin-top:30px;
     }
 &__title:hover{
 opacity: 0.6;
@@ -55,43 +57,44 @@ opacity: 0.6;
 opacity: 0.3;
 
 }
-
-    &__descr {
-
-  color: $darkGray;
+&__descr {
+@include textLg(13px, 400);
+color: $darkGray;
   line-height: 30px;
-  margin-left: 30px;
-  margin-top: -17px;
-  padding-bottom: 20px;
+margin-left: 30px;
+  margin-top: -50px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
-  width: 204px;
+width: 204px;
     }
 .catalog-price {
-
-
-  width: 204px;
+@include flexbox;
+width: 204px;
   justify-content: space-between;
   margin-left: 30px;
 &__number {
-
-  line-height: 24px;
-  margin-top: 10px;
+@include textLg(17px, 700);
+line-height: 24px;
+  margin-top: 17px;
   margin-bottom: 20px;
+color:black;
       }
 &__link {
-        margin-top: 12px;
+
+        margin-top: 22px;
       }
 &__link-pic{
-width: 21px;
-height: 19px;
-opacity:1;
-}
-&__link-pic:hover{
-background:url('/src/img/sprites.png')-65px -215px;
+background:url('/src/img/sprites.png')-16px -214px;
 
 width: 21px;
 height: 18px;
-background: url(/src/img/css_sprites.png) -913px -836px;
+opacity:1;
+}
+&__link-pic:hover{
+background:url('/src/img/sprites.png') -65px -215px;
+width: 21px;
+height: 18px;
+
 
 }
 }
@@ -107,32 +110,34 @@ flex-direction: column;
 
   .player-process {
 
-
+@include flexbox;
 flex-direction: row-reverse;
 justify-content: space-around;
-padding-left: 40px;
+
 &__title {
 @include textLg(17px, 700);
-margin-left: 25px;
+width: 126px;
+margin-left: 5px;
     line-height: 24px;
-margin-top: 20px;
+margin-top: 19px;
+
   }
 &__link-pic {
-background:url('/src/img/sprites.png')-314px -263px;
-
-
+background:url('/src/img/sprites.png') -314px -263px;
+position: absolute;
 width: 32px;
 height: 22px;
+margin-top: 35px;
+margin-left: 0px;
 
-    margin-top: 35px;
 }
 }
 .video-page {
 &__link-pic {
-background:url('../src/img/sprites.png') -739px -11px;
+background:url('/src/img/sprites.png') -739px -11px;
 width: 102px;
 height: 78px;
-
+cursor: pointer;
 margin-top: -116px;
 margin-left: 79px;
 position: absolute;
@@ -164,52 +169,67 @@ order:3;
 }
 }
 .footer{
+@include flexbox;
 
     flex-direction: column;
     margin-top: 58px;
     background:#f1f1f1;
     height: 160px;
-    // width: 320px;
+     width: 320px;
 &__social{
-margin-left: 30px;
+@include flexbox;
 margin-top: 30px;
 border-bottom:1px solid #e5e5e5;
-
-
 padding-bottom: 30px;
 width: 260px;
+margin-left: 0px;
 }
 &__insta {
-margin-left: 57px;
-padding-right: 41px;
+margin-right: 40px;
+margin-left: 87px;
 width: 22px;
 height: 21px;
 cursor: pointer;
   background: url('/src/img/sprites.png') -15px -61px;
-
-
-
+}
+&__insta:hover{
+background:url('/src/img/sprites.png') -63px -62px;
+width: 22px;
+height: 21px;
 }
   &__facebook {
     cursor: pointer;
-    padding-right: 40px;
+margin-right: 30px;
 width: 21px;
 height: 29px;
 background: url('/src/img/sprites.png') -17px -110px;
-
 }
+&__facebook:hover{
+width: 21px;
+height: 29px;
+background: url('/src/img/sprites.png') -64px -110px;
+}
+
 &__twitter{
   cursor: pointer;
  width: 24px;
  height: 20px;
  background: url('/src/img/sprites.png') -14px -14px;
-
 }
+&__twitter:hover{
+ width: 23px;
+ height: 20px;
+ background: url('/src/img/sprites.png') -61px -15px;
+}
+
 &__link{
 margin-left: 40px;
 }
-
+&__copyright{
+display: flex;
+}
 &__creator{
+@include textLg(19px, 700);
 
 margin-left: 69px;
 }
@@ -220,13 +240,11 @@ margin-left: 30px;
 width: 27px;
 height: 34px;
 background: url('/src/img/sprites.png') -14px -158px;
-
 }
 &__creator-pic:hover{
  width: 27px;
  height: 34px;
  background: url("/src/img/sprites.png") -14px -158px;
-
 }
 }
 .modal-ctg {
@@ -236,7 +254,7 @@ margin-left: -30px;
   height: 336px;
   box-shadow: 0 5px 10px rgba(0, 1, 1, 0.25);
   border: 1px solid #c6c6c6;
-background: #fff;
+background: $white;
 position: fixed;
 top: 50%;
 display: none;
@@ -249,11 +267,9 @@ display: none;
     text-transform: uppercase;
 }
   &__text {
-
-    line-height: 30px;
-
-    text-align: center;
-    margin-top: -15px;
+line-height: 30px;
+text-align: center;
+margin-top:-15px;
   }
 &__form{
 width: 260px;
@@ -289,7 +305,8 @@ color:$white;
 margin-left: 30px;
 text-transform:uppercase;
 margin-top: 44px;
-border: none
+border: none;
+
   }
 .overlay{
 width: 320px;
@@ -399,52 +416,46 @@ display: block;
   }
 }
 
-@media (min-width:760px){
-
-  .catalog {
-
-    &__item {
+@media (min-width:768px){
+.catalog {
+&__item {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-    }
-    &__title {
-      @include titleXlTab;
+}
+&__title {
+@include titleXlTab;
       align-self: flex-start;
       margin: 0 0 59px 0;
-    }
-    .menu-top {
+}
+.menu-top {
       height: 88px;
       width: 760px;
-      @include flexbox;
-      &__logo {
+@include flexbox;
+&__logo {
 width: 113px;
 height: 46px;
-
-        background: url('/src/img/css_sprites.png')no-repeat -744px -463px;
-        cursor: pointer;
+background: url('/src/img/css_sprites.png')no-repeat -744px -463px;
+cursor: pointer;
 margin-left: 48px;
-
-      }
-      &__item {
-        @include flexbox;
-      }
-      &__link {
-        @include textLg(15px,
-        700);
+}
+&__item {
+@include flexbox;
+}
+&__link {
+@include textLg(15px,700);
         margin-top: 25px;
         line-height: 24px;
         margin-left: 50px;
         margin-right: -23px;
         display: block;
-      }
-      &__link-shipping {
+}
+ &__link-shipping {
         margin-left: 160px;
         margin-top: 25px;
         height: 14px;
         position: absolute;
-        @include textLg(15px,
-        400);
+@include textLg(15px,400);
         color: #444444;
         text-decoration: none;
         line-height: 24px;
@@ -453,6 +464,7 @@ margin-left: 48px;
 
  // index
  .catalog {
+
    &__title {
      font-size: 25px;
      line-height: calc(30/25);
@@ -560,16 +572,16 @@ margin-left: 48px;
      width: 181px;
    }
  } //
+  }
 
-}
 
 // _______________________________
 
 
 .main-catalog{
-
+width: 768px;
     margin-top: -35px;
-border:1px solid red;
+margin-top: -515px;///////как то надо изменить))
 &__title {
 @include textLg(43px, 700);
     padding:106px 0px 78px 198px;
@@ -577,76 +589,90 @@ border:1px solid red;
     line-height: 50px;
 }
 .catalog{
-
-
+@include flexbox;
     flex-wrap: wrap;
     margin-top: 70px;
+  width: 760px;
 &__img{
-    background:url(/src/img/item1-1x.png)no-repeat ;
-    width: 334px;
-    height: 334px;
+    background:url('/src/img/item1-desktop-1x.jpg') no-repeat ;
+width: 334px;
+
+ height: 334px;
+
     margin-left: 50px;
     margin-bottom: 44px;
 }
 &__item{
-width: 335px;
+width: 345px;
 height: 333px;
 margin-top: 0px;
 border: 1px solid #ececec;
 background-color: #ffffff;
-margin-left: 0;
+margin-left: -18px;
+
 }
 &__title{
 @include textLg(20px, 700);
 line-height: 24px;
 margin-left:28px;
-margin-top: 25px;
+margin-top: 20px;
+
 }
 &__descr{
 @include textLg(15px, 400);
 color:#444444;
 line-height: 30px;
-margin-top: -20px;
+margin-top: -55px;
  padding-bottom: 170px;
  border-bottom: 1px solid #ececec;
  width: 268px;
 margin-left: 30px;
 }
   .catalog-price {
-
-  width: 268px;
+@include flexbox;
+width: 268px;
   justify-content: space-between;
   margin-left: 30px;
-  }
+
+&__number{
+margin-top: 20px;
+}
+}
 }
 }
 .player-video {
 @include flexbox;
-height: 703px;
+
+width: 668px;
+
+height: 680px;
+margin-left: 50px;
+
 .player-process {
+@include flexbox;
 
     order: 2;
     margin-top: 43px;
 &__title {
     @include textLg(20px, 700);
-    margin-top: -53px;
-    margin-right:350px;
+    margin-top: -47px;
+    margin-right:300px;
+    width: 241px;
 }
 &__link-pic{
 background:url('/src/img/sprites.png') -314px -263px;
 	width: 32px;
 	height: 22px;
-
-    margin-left: -8px;
-    margin-top: -50px;
+margin-left: 12px;
+    margin-top: -45px;
     position: absolute;
 }
 }
 .video-page {
 &__video img {
-    width: 100%;
-
-    margin-bottom: 39px;
+width: 668px;
+margin-left: 0px;
+margin-bottom: 39px;
     margin-top: -20px;
     order: 1;
     }
@@ -655,8 +681,7 @@ cursor: pointer;
 background:url('/src/img/sprites.png') -739px -11px;
 width: 102px;
 height: 78px;
-
-    margin-top: -308px;
+ margin-top: -308px;
     position: absolute;
     margin-left: 280px;
 }
@@ -664,7 +689,7 @@ height: 78px;
     width: 581px;
     @include textLg(15px, 400);
     order:3;
-    margin-top: -9px;
+    margin-top: 0px;
     margin-left: 40px;
     line-height: 30px;
 }
@@ -675,14 +700,16 @@ height: 78px;
     order:4;
     border: 2px solid #444444;
     background-color: #ffffff;
-    margin-right: 42px;
+
     margin-top: 43px;
+margin-left: 42px;
+padding:16px 0px 16px 0px;
 }
 }
 .footer{
 flex:0 0 auto;
 flex-direction: row;
-// width: 760px; размеры написаны в body.scss
+ width: 760px;
 height: 143px;
 background:#f1f1f1;
 margin-top: 63px;
@@ -694,13 +721,13 @@ margin-top: 51px;
 margin-left: 50px;
 cursor: pointer;
 }
-// &__social{
-// margin-top: 63px;
-// margin-left: 99px;
-// }
+ &__social{
+ margin-top: 63px;
+ margin-left: 69px;
+ }
 &__copyright{
 margin-top: 38px;
-margin-left: -50px;
+margin-left: -20px;
 }
 }
   .modal-ctg {
