стили для главной страницы

--- a/src/style/_mixin.scss
+++ b/src/style/_mixin.scss
@@ -14,7 +14,7 @@
   font-size: 15px;
   line-height: calc(24/15);
  }
- @mixin titleXlMob{
+ @mixin titleXlMob {
   font-size: 27px;
   line-height: calc(30/27);
   font-weight: 700;
@@ -35,11 +35,11 @@
    line-height: calc(50/43);
    font-weight: 700;
  }
-// @mixin flexbox {
-  // display: -webkit-box;
-  // display: -moz-box;
-  // display: -ms-flexbox;
-  // display: -webkit-flex;
-  // display: flex;
-// }
+ @mixin flexbox {
+   display: -webkit-box;
+   display: -moz-box;
+   display: -ms-flexbox;
+   display: -webkit-flex;
+   display: flex;
+ }
 
