--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -292,14 +292,14 @@ margin-left: 10px;
 }
 @media (min-width: 768px){
 
-.menu-top{
+
   // height: 88px;
   // width: 760px;
 
 
 
 
-
+// header сделаю я , у нас тут сильно расходится и перебиваются стили
 
 // &__logo{
 //  width: 113px;
@@ -309,26 +309,26 @@ margin-left: 10px;
 // margin-left: 48px;
 // }
 
-&__link{
-@include textLg(15px, 700);
-margin-top: 25px;
-line-height: 24px;
-margin-left: 50px;
-margin-right: -23px;
-display: block;
+// &__link{
+// @include textLg(15px, 700);
+// margin-top: 25px;
+// line-height: 24px;
+// margin-left: 50px;
+// margin-right: -23px;
+// display: block;
+// }
+// &__link-shipping {
+  // margin-left: 160px;
+  // margin-top: 25px;
+  // height: 14px;
+  // position: absolute;
+  // @include textLg(15px, 400);
+  // color: #444444;
+  // text-decoration: none;
+  // line-height: 24px;
 }
-&__link-shipping {
-  margin-left: 160px;
-  margin-top: 25px;
-  height: 14px;
-  position: absolute;
-  @include textLg(15px, 400);
-  color: #444444;
-  text-decoration: none;
-  line-height: 24px;
-}
-}
-}
+
+
 // index
 .catalog {
 
@@ -371,6 +371,13 @@ display: block;
   margin: 0 0 76px 0;
   cursor: pointer;
 }
+.btn:hover{
+  background-color: $darkGray;
+  color: $white;
+}
+.btn:active{
+  opacity: 0.8;
+}
 .table {
   margin-bottom: 29px;
 
@@ -383,7 +390,7 @@ display: block;
   }
 }
 
-@media (min-width:760px){
+@media (min-width:768px){
 
   .catalog {
 
@@ -391,11 +398,12 @@ display: block;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      margin-top: 60px;
     }
     &__title {
       @include titleXlTab;
       align-self: flex-start;
-      margin: 0 0 59px 0;
+      margin: 0 0 57px 0;
     }
 
     // &__title--hot::before{
@@ -433,7 +441,7 @@ display: block;
       @include descrTablet;
       align-self: flex-start;
       padding-top: 0;
-      padding: 0 0 55px 0;
+      padding: 0 0 52px 0;
 
     width: 285px;
     }
@@ -593,7 +601,7 @@ margin-left: -50px;
   &__text {
     @include textLg(15px, 400);
     line-height: 30px;
-    color: $grayBtn;
+    color: $darkGray;
     text-align: center;
     margin-top: -15px;
   }
@@ -641,7 +649,7 @@ margin-left: -50px;
     background-color: #fff;
     border: 1px solid red;
     cursor: pointer;
-display: none;
+    display: none;
     z-index: 3;
     top: 0;
     left: 0;
