--- a/src/style/_mixin.scss
+++ b/src/style/_mixin.scss
@@ -10,6 +10,11 @@
    font-weight: 700;
    line-height: calc(20/17);
  }
+ @mixin titleContactMobile {
+   font-size: 18px;
+   font-weight: 700;
+   line-height: calc(30/18);
+ }
  @mixin itemTop {
   font-size: 15px;
   line-height: calc(24/15);
