--- a/src/style/blocks/pageMain/aboutUs.scss
+++ b/src/style/blocks/pageMain/aboutUs.scss
@@ -32,7 +32,8 @@
     &__feature:nth-child(7){
       width: 250px;
     }
-    &__icon1{
+    &__feature:nth-child(1)::before{
+      content: '';
       display: block;
       background: url(/src/img/sprites.png);
       background-position: -157px -7px ;
@@ -40,7 +41,9 @@
       height: 38px;
       margin: 20px;
     }
-    &__icon2{
+
+    &__feature:nth-child(2)::before{
+      content: '';
       display: block;
       background: url(/src/img/sprites.png);
       background-position: -151px -58px ;
@@ -48,7 +51,9 @@
       height: 27px;
       margin: 15px;
     }
-    &__icon3{
+
+    &__feature:nth-child(3):before{
+      content: ''; 
       display: block;
       background: url(/src/img/sprites.png);
       background-position: -157px -109px ;
@@ -56,7 +61,9 @@
       height: 27px;
       margin: 20px;
     }
-    &__icon4{
+    
+    &__feature:nth-child(4):before{
+      content: '';
       display: block;
       background: url(/src/img/sprites.png);
       background-position: -155px -156px ;
@@ -64,7 +71,9 @@
       height: 34px;
       margin: 20px;
     }
-    &__icon5{
+
+    &__feature:nth-child(5):before{
+      content: '';
       display: block;
       background: url(/src/img/sprites.png);
       background-position: -152px -212px ;
@@ -72,7 +81,9 @@
       height: 23px;
       margin: 15px;
     }
-    &__icon6{
+
+    &__feature:nth-child(6):before{
+      content: '';
       display: block;
       background: url(/src/img/sprites.png);
       background-position: -157px -255px ;
@@ -80,7 +91,7 @@
       height: 32px;
       margin: 20px;
     }
-  }
+}
   .slider {
   
     &__title {
@@ -101,3 +112,65 @@
       color: $darkGray;
     }
   }
+
+@media (min-width: 768px) {
+
+  .about-us {
+
+    &__title {
+      align-self: flex-start;
+    }
+   
+
+    &__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: baseline;
+    width: 630px;
+  }
+
+    &__feature:nth-child(1) {
+    order: 1;
+    flex-basis: 185px;
+    margin-right: 128px;
+  }
+
+  &__feature:nth-child(2) {
+    order: 3;
+    margin-right: 95px;
+    flex-basis: 220px;
+  }
+
+  &__feature:nth-child(3) {
+    order: 5;
+    flex-basis: 195px;
+    margin-right: 120px;
+  }
+
+  &__feature:nth-child(4) {
+    order: 2;
+  }
+
+  &__feature:nth-child(5) {
+    order: 4;
+  }
+
+  &__feature:nth-child(6) {
+    order: 6;
+  }
+}
+}
+
+@media (min-width: 1024px) {
+
+  .about-us{
+
+    &__list {
+      margin: 0 auto;
+    }
+  }
+}
+
+
+
